--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
-<img src="355B50EC-444E-43DA-9288-49A1A685615C.jpeg">
+<img src="355B50EC-444E-43DA-9288-49A1A685615C.jpeg" height="200" width="200" >
+                                                                         
 </body>
 </html>
